<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="jetray.tictactoe.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playerone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/edit_name_player_one"
        android:imeActionLabel="NEXT"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences|textPersonName"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="16dp"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/player1x"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/type_x"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/player1o"
        app:layout_constraintTop_toBottomOf="@+id/playerone" />

    <CheckBox
        android:id="@+id/player1o"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/type_o"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/playerone" />

    <EditText
        android:id="@+id/playertwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name_player_two"
        android:imeActionLabel="DONE"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/player1x"
        tools:layout_editor_absoluteX="16dp" />

    <CheckBox
        android:id="@+id/player2x"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/type_x"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/player2o"
        app:layout_constraintTop_toBottomOf="@+id/playertwo" />

    <CheckBox
        android:id="@+id/player2o"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:gravity="center_vertical"
        android:text="@string/type_o"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/playertwo" />

    <CheckBox
        android:id="@+id/splayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/mode_single_player"
        app:layout_constraintEnd_toStartOf="@+id/player2x"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2x" />

    <CheckBox
        android:id="@+id/tplayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/mode_two_player"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splayer" />

    <Spinner
        android:id="@+id/difficulty"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:hint="@string/mode_difficulty"
        app:layout_constraintBottom_toTopOf="@+id/tplayer"
        app:layout_constraintEnd_toEndOf="@+id/playertwo"
        app:layout_constraintStart_toEndOf="@+id/splayer"
        app:layout_constraintTop_toTopOf="@+id/splayer" />

    <Button
        android:id="@+id/start"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round"
        android:onClick="startgame"
        android:text="@string/button_start"
        android:textColor="@android:color/white"
        android:windowSoftInputMode="adjustResize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

</android.support.constraint.ConstraintLayout>


